--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightslategrey;
+    background-color: #9bcfb5;
     height: 100vh;
 }
