--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -2,6 +2,7 @@
     background-color: #4CAF50;
     height: 30px;
     margin-left: 10px;
+    margin-right: 10px;
     border: none;
     color: white;
     padding: 5px;
