--- a/src/components/todo-item/todo-item.css
+++ b/src/components/todo-item/todo-item.css
@@ -1,6 +1,6 @@
 .todo-item {
-    list-style: none;
-    margin-top: 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
