--- a/src/components/todolist/todolist.css
+++ b/src/components/todolist/todolist.css
@@ -2,3 +2,12 @@
     margin: 0;
     padding: 0;
 }
+.li-style {
+    list-style: none;
+    margin-top: 5px;
+    padding: 3px;
+    padding-left: 10px;
+    border: 1px solid #9E9E9E;
+    border-radius: 6px;
+    background-color: azure;
+}
