--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,5 +1,4 @@
 .btn {
-    background-color: #4CAF50;
     height: 30px;
     margin-left: 10px;
     margin-right: 10px;
@@ -11,7 +10,14 @@
     display: inline-block;
     border-radius: 6px;
 }
+.btn:hover {
+    cursor: pointer;
+}
 
-.btn-delete {
+.btn--delete {
     background-color: #f44336;
+}
+
+.btn--add {
+    background-color: green;
 }
